--- a/.github/workflows/WRT-TEST.yml
+++ b/.github/workflows/WRT-TEST.yml
@@ -27,7 +27,7 @@ on:
         options: [argon, design]
       TEST:
         description: '仅输出配置文件，不编译固件。'
-        default: 'true'
+        default: 'false'
         required: true
         type: boolean
       PACKAGE:
